// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pretty SELECT formatting should format SELECT with UNION with pretty option enabled 1`] = `
"SELECT
  name
FROM
customers
UNION
ALL
SELECT
  name
FROM
suppliers
ORDER BY
  name;"
`;

exports[`Pretty SELECT formatting should format SELECT with multiple JOINs with pretty option enabled 1`] = `
"SELECT
  u.id,
  u.name,
  u.email,
  p.title
FROM
users AS u 
JOIN profiles AS p ON u.id = p.user_id 
LEFT JOIN orders AS o ON u.id = o.user_id 
RIGHT JOIN addresses AS a ON u.id = a.user_id
WHERE
  u.active = true;"
`;

exports[`Pretty SELECT formatting should format SELECT with subquery with pretty option enabled 1`] = `
"SELECT
  id,
  name
FROM
users
WHERE
  id IN (SELECT
    user_id
  FROM
  orders
  WHERE
    total > 100);"
`;

exports[`Pretty SELECT formatting should format basic SELECT with pretty option enabled 1`] = `
"SELECT
  id,
  name,
  email
FROM
users
WHERE
  active = true;"
`;

exports[`Pretty SELECT formatting should format complex SELECT with pretty option enabled 1`] = `
"SELECT
  u.id,
  u.name,
  u.email,
  p.title
FROM
users AS u 
JOIN profiles AS p ON u.id = p.user_id
WHERE
  u.active = true AND u.created_at > '2023-01-01'
GROUP BY
  u.id,
  u.name,
  u.email,
  p.title
HAVING
  count(*) > 1
ORDER BY
  u.created_at DESC,
  u.name ASC
LIMIT
10
OFFSET
5;"
`;

exports[`Pretty SELECT formatting should maintain single-line format for complex SELECT when pretty disabled 1`] = `"SELECT u.id, u.name, u.email, p.title FROM users AS u JOIN profiles AS p ON u.id = p.user_id WHERE u.active = true AND u.created_at > '2023-01-01' GROUP BY u.id, u.name, u.email, p.title HAVING count(*) > 1 ORDER BY u.created_at DESC, u.name ASC LIMIT 10 OFFSET 5;"`;

exports[`Pretty SELECT formatting should maintain single-line format when pretty option disabled 1`] = `"SELECT id, name, email FROM users WHERE active = true;"`;

exports[`Pretty SELECT formatting should use custom newline and tab characters in pretty mode 1`] = `
"SELECT
    id,
    name,
    email
FROM
users
WHERE
    active = true;"
`;
